2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valasymbolresolver.vala:
	  fix issues when using non-null types

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: deprecate construct as parameter modifier,
	  fixes bug 524138

	* */*.vala: port to new syntax

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: report warning when using obsolete syntax
	  for non-null types

	* */*.vala, */*.vapi: port to new syntax

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: report warning when using deprecated syntax
	  for property default values

	* vala/valaconstructor.vala, vala/valaenum.vala: port to new syntax

2008-04-13  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (Value): add init, register_transform, and
	boxed bindings, fixes bug 514349.

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaerrortype.vala, vala/valasemanticanalyzer.vala: never use
	  ClassType for ErrorType instances

	* vapi/glib-2.0.vapi: use errordomains instead of enums with
	  [ErrorDomain] attribute

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support takes_ownership metadata
	  attribute for method parameters

	* vapi/packages/gnome-keyring-1/: AttributeList fixes,
	  patch by Ross Burton, fixes bug 527522

	* vapi/gnome-keyring-1.vapi: regenerated

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala: don't use `weak' for value types used as
	  type arguments

	* vapigen/valagidlparser.vala: add metadata attribute to specify
	  type arguments

	* vapi/packages/gnome-keyring-1/: fix
	  gnome_keyring_list_item_ids_sync binding, fixes bug 527230

	* vapi/gnome-keyring-1.vapi: regenerated

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: set correct source_reference for property
	  accessors

	* vala/valasemanticanalyzer.vala: set source_reference for
	  generated code of automatic properties, fixes bug 527131
